# mtg_search

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/poc_v1/: README.md
archive/poc_v1/scripts/: fetch_and_process_mtg.py
archive/poc_v1/src/: compile_initial_training_data.py  config.py
archive/poc_v1/src/training/: distill_model.py  fine_tune_with_rulings.py  validate_model.py
archive/poc_v1/src/vector_db/: build_vector_db.py  query_vector_db.py
configs/: baseline.yaml
data/eval/: methodology_references.md  queries_v1_draft.yaml
data/keywords/: manual_overrides.json  reminder_text.json
docs/archive/: 2025-11-03-original-proposal.md
docs/journal/: 2026-05-17-cards-schema.md  2026-05-17-corpus-survey.md  2026-05-17-keyword-augmentation.md  2026-05-17-poc-retrospective.md  2026-05-17-redesign-kickoff.md  2026-05-18-baseline-results.md  2026-05-18-eval-set-construction.md  TEMPLATE.md
docs/process/: milestone-checkpoints.md
docs/roadmap/: phase-0-overview.md  phase-1-foundation-and-logging.md  phase-2-ingestion-and-schema.md  phase-3-baseline-and-eval.md  phase-4-hyde-and-prefilter.md  phase-5-systematic-eval.md  phase-6-optimization.md  phase-7-finalization.md
scripts/: build_keyword_dict.py  download_scryfall.py  embed.py  eval_lookup.py  evaluate.py  ingest.py  migrate.py  render_review.py  survey_corpus.py
src/: config.py  logging_utils.py  preprocess_text.py
src/data_processing/: compile_initial_training_data.py  download_bulk_data.py  ingest_transform.py  keyword_extract.py  scryfall_classify.py
src/db/: experiment_log.py
src/db/migrations/: 0001_initial.sql  0002_cards.sql
src/eval/: metrics.py
src/training/: train_initial_model_mps.py
src/utils/: device.py
src/vector_db/: build_vector_db.py  query_vector_db.py
tests/: check_model.py  test_eval_metrics.py  test_experiment_log.py  test_ingest_transform.py  test_keyword_extract.py  test_logging_utils.py  test_preprocess_text.py  test_queries.py  test_scryfall_classify.py  test_vector_db.py
